base de l'ecran du jeu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <title>Clicker Game</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Clicker Game</h1>
+    </header>
+    <main>
+        <h3>score: 0</h3>
+        <div class="jeu">
+            <div class="gauche">
+                <img src="./assets/image/axolotl.jpg" alt="">
+            </div>
+
+            <div class="droite">
+            </div>    
+        </div>
+    </main>
 </body>
 <script src="./assets/js/script.js"></script>
 </html>
