ajout compteur de base

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <h1>Clicker Game</h1>
     </header>
     <main>
-        <h3>score: 0</h3>
+        <h3 id="score">score: 0</h3>
         <div class="jeu">
             <div class="gauche">
-                <img src="./assets/image/axolotl.jpg" alt="">
+                <img id="click" src="./assets/image/axolotl.jpg" alt="">
             </div>
 
             <div class="droite">
