ajout bouton du magasin et image de fond

--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
             </div>
 
             <div class="droite">
+                <button class="shopbtn">premier bouton</button>
+                <button class="shopbtn">premier bouton</button>
+                <button class="shopbtn">premier bouton</button>
+                <button class="shopbtn">premier bouton</button>
+                <button class="shopbtn">premier bouton</button>
+                <button class="shopbtn">premier bouton</button>
+                <button class="shopbtn">premier bouton</button>
+                <button class="shopbtn">premier bouton</button>
+                <button class="shopbtn">premier bouton</button>
+                <button class="shopbtn">premier bouton</button>
+                <button class="shopbtn">premier bouton</button>
+                <button class="shopbtn">premier bouton</button>
             </div>    
         </div>
     </main>
