--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             </div>
 
             <div class="droite">
-                <button class="shopbtn">premier bouton</button>
+                <h3 class="shop">Magasin</h3>
+                <button class="shopbtn" id="shopitem1">premier bouton</button>
                 <button class="shopbtn">premier bouton</button>
                 <button class="shopbtn">premier bouton</button>
                 <button class="shopbtn">premier bouton</button>
