ajout augmentation des point via shopitem2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="droite">
                 <h3 class="shop">Magasin</h3>
                 <button class="shopbtn" id="shopitem1">premier bouton</button>
-                <button class="shopbtn">premier bouton</button>
+                <button class="shopbtn" id="shopitem2">premier bouton</button>
                 <button class="shopbtn">premier bouton</button>
                 <button class="shopbtn">premier bouton</button>
                 <button class="shopbtn">premier bouton</button>
