debut stilysation de jeu

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <h3 id="score">score: 0</h3>
         <div class="jeu">
             <div class="gauche">
-                <img id="click" src="./assets/image/axolotl.jpg" alt="">
+                <img id="click" src="./assets/image/oeuf_axolotl.jpg" alt="">
             </div>
 
             <div class="droite">
                 <h3 class="shop">Magasin</h3>
-                <button class="shopbtn" id="shopitem1">premier bouton</button>
-                <button class="shopbtn" id="shopitem2">deuxieme bouton</button>
+                <button class="shopbtn" id="shopitem1">nourriture: daphnies</button>
+                <button class="shopbtn" id="shopitem2">petit aquarium</button>
             </div>    
         </div>
     </main>
