--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/jpg" href="./assets/image/axo_logo_2.png" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Clicker Game</title>
 </head>
