ajout nouveaux articles produit et affichage du prix

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 
             <div class="droite">
                 <h3 class="shop">Magasin</h3>
-                <button class="shopbtn" id="shopitem1">nourriture: daphnies</button>
-                <button class="shopbtn" id="shopitem2">petit aquarium</button>
+                <button class="shopbtn" id="shopitem1">nourriture: daphnies 10</button>
+                <button class="shopbtn" id="shopitem2">petit aquarium 30</button>
+                <button class="shopbtn" id="shopitem3">nourriture: vers de vase 100</button>
+                <button class="shopbtn" id="shopitem4">nourriture: petite crevette 300</button>
             </div>    
         </div>
     </main>
