ajout nouveaux objets dans la boutique

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <button class="shopbtn" id="shopitem3">nourriture: vers de vase 100</button>
                 <button class="shopbtn" id="shopitem4">nourriture: petite crevette 300</button>
                 <button class="shopbtn" id="shopitem5">grand aquarium 1000</button>
+                <button class="shopbtn" id="shopitem6">decoration: plantes 1500</button>
+                <button class="shopbtn" id="shopitem7">decoration: cachette 1700</button>
+                <button class="shopbtn" id="shopitem8">aquarium "sauvage" 2500</button>
             </div>    
         </div>
     </main>
