ajout de commentaire dans le code

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
         <h1>Clicker Game</h1>
     </header>
     <main>
+        <!-- debut de la partie du jeu -->
         <h3 id="score">score: 0</h3>
         <div class="jeu">
+            <!-- image a cliquer pour gagner des points -->
             <div class="gauche">
                 <img id="click" src="./assets/image/oeuf_axolotl.jpg" alt="">
             </div>
 
+            <!-- magasin -->
             <div class="droite">
+                <!-- articles du magasin -->
                 <h3 class="shop">Magasin</h3>
                 <button class="shopbtn" id="shopitem1">nourriture: daphnies 10</button>
                 <button class="shopbtn" id="shopitem2">petit aquarium 30</button>
