ajout de meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="jeu clicker game sur les axolotl, gagner des points en cliquant et achter des amélioration a la boutique">
     <link rel="shortcut icon" type="image/jpg" href="./assets/image/axo_logo_2.png" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Clicker Game</title>
@@ -41,7 +42,7 @@
         <div class="jeu">
             <!-- image a cliquer pour gagner des points -->
             <div class="gauche">
-                <img id="click" src="./assets/image/oeuf_axolotl.jpg" alt="">
+                <img id="click" src="./assets/image/oeuf_axolotl.jpg" alt="image d'axolotl">
             </div>
 
             <!-- magasin -->
